Parser/EmperorParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.8 from Parser/EmperorParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseEmperor -> ast                         (0)
	%start_parseREPL -> moduleItem                     (1)
	ast -> moduleHeader usings moduleBody              (2)
	moduleHeader -> "module" IDENT ";"                 (3)
	usings ->                                          (4)
	usings -> using ";" usings                         (5)
	using -> "import" usingLabel                       (6)
	using -> "import" usingLabel "(" identList ")"     (7)
	usingLabel -> "<" IDENT ">"                        (8)
	usingLabel -> STRING                               (9)
	identList -> IDENT                                 (10)
	identList -> IDENT "," identList                   (11)
	moduleBody -> moduleItem                           (12)
	moduleBody -> moduleItem moduleBody                (13)
	moduleItem -> component                            (14)
	moduleItem -> typeClass                            (15)
	moduleItem -> functionDef                          (16)
	component -> "component" IDENT maybe__typeComparisons__ ":" functionDefs "#"   (17)
	functionDefs ->                                    (18)
	functionDefs -> functionDef functionDefs           (19)
	typeClass -> "class" IDENT maybe__typeComparisons__ ":" memberTypes "#"   (20)
	memberTypes ->                                     (21)
	memberTypes -> functionTypeDef memberTypes         (22)
	functionDef -> functionTypeDef ";" IDENT functionParamDef ":" body "#"   (23)
	functionTypeDef -> IDENT "::" typedef              (24)
	functionParamDef ->                                (25)
	functionParamDef -> IDENT functionParamDef         (26)
	typeComparisons -> typeComparison                  (27)
	typeComparisons -> typeComparison "," typeComparisons   (28)
	typeComparison -> "<:" IDENT                       (29)
	typeComparison -> "<:" IDENT "<~" IDENT            (30)
	body -> bodyBlock                                  (31)
	body -> bodyBlock body                             (32)
	bodyBlock -> bodyLine ";"                          (33)
	bodyBlock -> "if" expr ":" body "else" ":" body "#"   (34)
	bodyBlock -> "while" expr ":" body "#"             (35)
	bodyBlock -> "for" IDENT "<-" expr ":" body "#"    (36)
	bodyBlock -> "repeat" expr ":" body "#"            (37)
	bodyBlock -> "with" assignment ":" body "#"        (38)
	bodyBlock -> "switch" expr ":" switchBody "#"      (39)
	switchBody ->                                      (40)
	switchBody -> switchCase "#" switchBody            (41)
	switchCase -> expr "->" bodyBlock                  (42)
	bodyLine -> assignment                             (43)
	bodyLine -> queue                                  (44)
	bodyLine -> impureCall                             (45)
	bodyLine -> "return" maybe__expr__                 (46)
	assignment -> maybe__typedef__ IDENT "=" expr      (47)
	queue -> maybe__typedef__ IDENT "<-" expr          (48)
	typedef -> tupleTypeDef                            (49)
	tupleTypeDef -> nonTupleTypeDef                    (50)
	tupleTypeDef -> nonTupleTypeDef "*" tupleTypeDef   (51)
	nonTupleTypeDef -> "int"                           (52)
	nonTupleTypeDef -> "bool"                          (53)
	nonTupleTypeDef -> "real"                          (54)
	nonTupleTypeDef -> "char"                          (55)
	nonTupleTypeDef -> "string"                        (56)
	nonTupleTypeDef -> "()"                            (57)
	nonTupleTypeDef -> "Any"                           (58)
	nonTupleTypeDef -> "(" typedef ")"                 (59)
	nonTupleTypeDef -> typedef "->" typedef            (60)
	nonTupleTypeDef -> "@" typedef "->" typedef        (61)
	nonTupleTypeDef -> "[" typedef "]"                 (62)
	nonTupleTypeDef -> "{" typedef "}"                 (63)
	expr -> value                                      (64)
	expr -> "!" expr                                   (65)
	expr -> "-" expr                                   (66)
	expr -> expr "+" expr                              (67)
	expr -> expr "-" expr                              (68)
	expr -> expr "*" expr                              (69)
	expr -> expr "/" expr                              (70)
	expr -> expr "%" expr                              (71)
	expr -> expr "<" expr                              (72)
	expr -> expr "<=" expr                             (73)
	expr -> expr ">" expr                              (74)
	expr -> expr ">=" expr                             (75)
	expr -> expr "==" expr                             (76)
	expr -> expr "!=" expr                             (77)
	expr -> expr "&" expr                              (78)
	expr -> expr "&&" expr                             (79)
	expr -> expr "|" expr                              (80)
	expr -> expr "||" expr                             (81)
	expr -> expr "=>" expr                             (82)
	expr -> expr "^" expr                              (83)
	expr -> expr "<<" expr                             (84)
	expr -> expr ">>" expr                             (85)
	expr -> expr ">>>" expr                            (86)
	expr -> "{" exprList "}"                           (87)
	expr -> "(" exprList ")"                           (88)
	expr -> "[" exprList "]"                           (89)
	value -> "_"                                       (90)
	value -> INT                                       (91)
	value -> REAL                                      (92)
	value -> IDENT                                     (93)
	value -> CHAR                                      (94)
	value -> BOOL                                      (95)
	value -> STRING                                    (96)
	value -> call                                      (97)
	call -> impureCall                                 (98)
	call -> pureCall                                   (99)
	impureCall -> "@" IDENT "(" exprList ")"           (100)
	pureCall -> IDENT "(" exprList ")"                 (101)
	exprList ->                                        (102)
	exprList -> exprListNonZero                        (103)
	exprListNonZero -> expr                            (104)
	exprListNonZero -> expr "," exprListNonZero        (105)
	maybe__expr__ ->                                   (106)
	maybe__expr__ -> expr                              (107)
	maybe__typeComparisons__ ->                        (108)
	maybe__typeComparisons__ -> typeComparisons        (109)
	maybe__typedef__ ->                                (110)
	maybe__typedef__ -> typedef                        (111)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	INT            { TInteger              intVal p }
	BOOL           { TBool                 isTrue p }
	REAL           { TReal                 realVal p }
	CHAR           { TChar                 charVal p }
	STRING         { TString               stringVal p }
	"if"           { TIf                   p }
	"else"         { TElse                 p }
	"while"        { TWhile                p }
	"repeat"       { TRepeat               p }
	"with"         { TWith                 p }
	"switch"       { TSwitch               p }
	"for"          { TFor                  p }
	"import"       { TImport               p }
	"module"       { TModule               p }
	IDENT          { TIdent                identifierVal p }
	"<-"           { TQueue                p }
	"->"           { TGoesTo               p }
	"="            { TGets                 p }
	"("            { TLParenth             p }
	")"            { TRParenth             p }
	"["            { TLBracket             p }
	"]"            { TRBracket             p }
	"{"            { TLBrace               p }
	"}"            { TRBrace               p }
	"+"            { TPlus                 p }
	"-"            { TMinus                p }
	"/"            { TDivide               p }
	"%"            { TModulo               p }
	"*"            { TTimes                p }
	"<<"           { TShiftLeft            p }
	">>"           { TShiftRight           p }
	">>>"          { TShiftRightSameSign   p }
	"&"            { TAndScrict            p }
	"&&"           { TAndLazy              p }
	"|"            { TOrStrict             p }
	"||"           { TOrLazy               p }
	"!"            { TNot                  p }
	"^"            { TXor                  p }
	"<"            { TLessThan             p }
	"<="           { TLessThanOrEqual      p }
	">"            { TGreaterThan          p }
	">="           { TGreaterThanOrEqual   p }
	"=>"           { TImplies              p }
	"=="           { TEqual                p }
	"!="           { TNotEqual             p }
	"@"            { TImpure               p }
	","            { TComma                p }
	":"            { TColon                p }
	";"            { TPartSeparator        p }
	"int"          { TIntT                 p }
	"bool"         { TBoolT                p }
	"real"         { TRealT                p }
	"char"         { TCharT                p }
	"string"       { TStringT              p }
	"()"           { TUnit                 p }
	"Any"          { TAnyT                 p }
	"<:"           { TIsSubType            p }
	"<~"           { TIsImplementeBy       p }
	"::"           { TIsType               p }
	"class"        { TClass                p }
	"component"    { TComponent            p }
	"#"            { TBlockSeparator       p }
	"_"            { TIDC                  p }
	"return"       { TReturn               p }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseEmperor rule  0
	%start_parseREPL rule  1
	ast             rule  2
	moduleHeader    rule  3
	usings          rules 4, 5
	using           rules 6, 7
	usingLabel      rules 8, 9
	identList       rules 10, 11
	moduleBody      rules 12, 13
	moduleItem      rules 14, 15, 16
	component       rule  17
	functionDefs    rules 18, 19
	typeClass       rule  20
	memberTypes     rules 21, 22
	functionDef     rule  23
	functionTypeDef rule  24
	functionParamDef rules 25, 26
	typeComparisons rules 27, 28
	typeComparison  rules 29, 30
	body            rules 31, 32
	bodyBlock       rules 33, 34, 35, 36, 37, 38, 39
	switchBody      rules 40, 41
	switchCase      rule  42
	bodyLine        rules 43, 44, 45, 46
	assignment      rule  47
	queue           rule  48
	typedef         rule  49
	tupleTypeDef    rules 50, 51
	nonTupleTypeDef rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	expr            rules 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89
	value           rules 90, 91, 92, 93, 94, 95, 96, 97
	call            rules 98, 99
	impureCall      rule  100
	pureCall        rule  101
	exprList        rules 102, 103
	exprListNonZero rules 104, 105
	maybe__expr__   rules 106, 107
	maybe__typeComparisons__ rules 108, 109
	maybe__typedef__ rules 110, 111

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"module"       shift, and enter state 4

	ast            goto state 13
	moduleHeader   goto state 3

State 1


	IDENT          shift, and enter state 10
	"class"        shift, and enter state 11
	"component"    shift, and enter state 12

	moduleItem     goto state 5
	component      goto state 6
	typeClass      goto state 7
	functionDef    goto state 8
	functionTypeDefgoto state 9

State 2


	"module"       shift, and enter state 4

	moduleHeader   goto state 3

State 3

	ast -> moduleHeader . usings moduleBody             (rule 2)

	"import"       shift, and enter state 21
	IDENT          reduce using rule 4
	"class"        reduce using rule 4
	"component"    reduce using rule 4

	usings         goto state 19
	using          goto state 20

State 4

	moduleHeader -> "module" . IDENT ";"                (rule 3)

	IDENT          shift, and enter state 18


State 5

	%start_parseREPL -> moduleItem .                    (rule 1)

	%eof           accept


State 6

	moduleItem -> component .                           (rule 14)

	IDENT          reduce using rule 14
	"class"        reduce using rule 14
	"component"    reduce using rule 14
	%eof           reduce using rule 14


State 7

	moduleItem -> typeClass .                           (rule 15)

	IDENT          reduce using rule 15
	"class"        reduce using rule 15
	"component"    reduce using rule 15
	%eof           reduce using rule 15


State 8

	moduleItem -> functionDef .                         (rule 16)

	IDENT          reduce using rule 16
	"class"        reduce using rule 16
	"component"    reduce using rule 16
	%eof           reduce using rule 16


State 9

	functionDef -> functionTypeDef . ";" IDENT functionParamDef ":" body "#"    (rule 23)

	";"            shift, and enter state 17


State 10

	functionTypeDef -> IDENT . "::" typedef             (rule 24)

	"::"           shift, and enter state 16


State 11

	typeClass -> "class" . IDENT maybe__typeComparisons__ ":" memberTypes "#"    (rule 20)

	IDENT          shift, and enter state 15


State 12

	component -> "component" . IDENT maybe__typeComparisons__ ":" functionDefs "#"    (rule 17)

	IDENT          shift, and enter state 14


State 13

	%start_parseEmperor -> ast .                        (rule 0)

	%eof           accept


State 14

	component -> "component" IDENT . maybe__typeComparisons__ ":" functionDefs "#"    (rule 17)

	":"            reduce using rule 108
	"<:"           shift, and enter state 47

	typeComparisonsgoto state 44
	typeComparison goto state 45
	maybe__typeComparisons__goto state 48

State 15

	typeClass -> "class" IDENT . maybe__typeComparisons__ ":" memberTypes "#"    (rule 20)

	":"            reduce using rule 108
	"<:"           shift, and enter state 47

	typeComparisonsgoto state 44
	typeComparison goto state 45
	maybe__typeComparisons__goto state 46

State 16

	functionTypeDef -> IDENT "::" . typedef             (rule 24)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 30
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 17

	functionDef -> functionTypeDef ";" . IDENT functionParamDef ":" body "#"    (rule 23)

	IDENT          shift, and enter state 29


State 18

	moduleHeader -> "module" IDENT . ";"                (rule 3)

	";"            shift, and enter state 28


State 19

	ast -> moduleHeader usings . moduleBody             (rule 2)

	IDENT          shift, and enter state 10
	"class"        shift, and enter state 11
	"component"    shift, and enter state 12

	moduleBody     goto state 26
	moduleItem     goto state 27
	component      goto state 6
	typeClass      goto state 7
	functionDef    goto state 8
	functionTypeDefgoto state 9

State 20

	usings -> using . ";" usings                        (rule 5)

	";"            shift, and enter state 25


State 21

	using -> "import" . usingLabel                      (rule 6)
	using -> "import" . usingLabel "(" identList ")"    (rule 7)

	STRING         shift, and enter state 23
	"<"            shift, and enter state 24

	usingLabel     goto state 22

State 22

	using -> "import" usingLabel .                      (rule 6)
	using -> "import" usingLabel . "(" identList ")"    (rule 7)

	"("            shift, and enter state 64
	";"            reduce using rule 6


State 23

	usingLabel -> STRING .                              (rule 9)

	"("            reduce using rule 9
	";"            reduce using rule 9


State 24

	usingLabel -> "<" . IDENT ">"                       (rule 8)

	IDENT          shift, and enter state 63


State 25

	usings -> using ";" . usings                        (rule 5)

	"import"       shift, and enter state 21
	IDENT          reduce using rule 4
	"class"        reduce using rule 4
	"component"    reduce using rule 4

	usings         goto state 62
	using          goto state 20

State 26

	ast -> moduleHeader usings moduleBody .             (rule 2)

	%eof           reduce using rule 2


State 27

	moduleBody -> moduleItem .                          (rule 12)
	moduleBody -> moduleItem . moduleBody               (rule 13)

	IDENT          shift, and enter state 10
	"class"        shift, and enter state 11
	"component"    shift, and enter state 12
	%eof           reduce using rule 12

	moduleBody     goto state 61
	moduleItem     goto state 27
	component      goto state 6
	typeClass      goto state 7
	functionDef    goto state 8
	functionTypeDefgoto state 9

State 28

	moduleHeader -> "module" IDENT ";" .                (rule 3)

	"import"       reduce using rule 3
	IDENT          reduce using rule 3
	"class"        reduce using rule 3
	"component"    reduce using rule 3


State 29

	functionDef -> functionTypeDef ";" IDENT . functionParamDef ":" body "#"    (rule 23)

	IDENT          shift, and enter state 60
	":"            reduce using rule 25

	functionParamDefgoto state 59

State 30

	functionTypeDef -> IDENT "::" typedef .             (rule 24)
	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)

	IDENT          reduce using rule 24
	"->"           shift, and enter state 58
	";"            reduce using rule 24
	"#"            reduce using rule 24


State 31

	typedef -> tupleTypeDef .                           (rule 49)

	IDENT          reduce using rule 49
	"->"           reduce using rule 49
	")"            reduce using rule 49
	"]"            reduce using rule 49
	"}"            reduce using rule 49
	"*"            reduce using rule 49
	";"            reduce using rule 49
	"#"            reduce using rule 49


State 32

	tupleTypeDef -> nonTupleTypeDef .                   (rule 50)
	tupleTypeDef -> nonTupleTypeDef . "*" tupleTypeDef    (rule 51)

	IDENT          reduce using rule 50
	"->"           reduce using rule 50
	")"            reduce using rule 50
	"]"            reduce using rule 50
	"}"            reduce using rule 50
	"*"            shift, and enter state 57
	";"            reduce using rule 50
	"#"            reduce using rule 50


State 33

	nonTupleTypeDef -> "(" . typedef ")"                (rule 59)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 56
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 34

	nonTupleTypeDef -> "[" . typedef "]"                (rule 62)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 55
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 35

	nonTupleTypeDef -> "{" . typedef "}"                (rule 63)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 54
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 36

	nonTupleTypeDef -> "@" . typedef "->" typedef       (rule 61)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 53
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 37

	nonTupleTypeDef -> "int" .                          (rule 52)

	IDENT          reduce using rule 52
	"->"           reduce using rule 52
	")"            reduce using rule 52
	"]"            reduce using rule 52
	"}"            reduce using rule 52
	"*"            reduce using rule 52
	";"            reduce using rule 52
	"#"            reduce using rule 52


State 38

	nonTupleTypeDef -> "bool" .                         (rule 53)

	IDENT          reduce using rule 53
	"->"           reduce using rule 53
	")"            reduce using rule 53
	"]"            reduce using rule 53
	"}"            reduce using rule 53
	"*"            reduce using rule 53
	";"            reduce using rule 53
	"#"            reduce using rule 53


State 39

	nonTupleTypeDef -> "real" .                         (rule 54)

	IDENT          reduce using rule 54
	"->"           reduce using rule 54
	")"            reduce using rule 54
	"]"            reduce using rule 54
	"}"            reduce using rule 54
	"*"            reduce using rule 54
	";"            reduce using rule 54
	"#"            reduce using rule 54


State 40

	nonTupleTypeDef -> "char" .                         (rule 55)

	IDENT          reduce using rule 55
	"->"           reduce using rule 55
	")"            reduce using rule 55
	"]"            reduce using rule 55
	"}"            reduce using rule 55
	"*"            reduce using rule 55
	";"            reduce using rule 55
	"#"            reduce using rule 55


State 41

	nonTupleTypeDef -> "string" .                       (rule 56)

	IDENT          reduce using rule 56
	"->"           reduce using rule 56
	")"            reduce using rule 56
	"]"            reduce using rule 56
	"}"            reduce using rule 56
	"*"            reduce using rule 56
	";"            reduce using rule 56
	"#"            reduce using rule 56


State 42

	nonTupleTypeDef -> "()" .                           (rule 57)

	IDENT          reduce using rule 57
	"->"           reduce using rule 57
	")"            reduce using rule 57
	"]"            reduce using rule 57
	"}"            reduce using rule 57
	"*"            reduce using rule 57
	";"            reduce using rule 57
	"#"            reduce using rule 57


State 43

	nonTupleTypeDef -> "Any" .                          (rule 58)

	IDENT          reduce using rule 58
	"->"           reduce using rule 58
	")"            reduce using rule 58
	"]"            reduce using rule 58
	"}"            reduce using rule 58
	"*"            reduce using rule 58
	";"            reduce using rule 58
	"#"            reduce using rule 58


State 44

	maybe__typeComparisons__ -> typeComparisons .       (rule 109)

	":"            reduce using rule 109


State 45

	typeComparisons -> typeComparison .                 (rule 27)
	typeComparisons -> typeComparison . "," typeComparisons    (rule 28)

	","            shift, and enter state 52
	":"            reduce using rule 27


State 46

	typeClass -> "class" IDENT maybe__typeComparisons__ . ":" memberTypes "#"    (rule 20)

	":"            shift, and enter state 51


State 47

	typeComparison -> "<:" . IDENT                      (rule 29)
	typeComparison -> "<:" . IDENT "<~" IDENT           (rule 30)

	IDENT          shift, and enter state 50


State 48

	component -> "component" IDENT maybe__typeComparisons__ . ":" functionDefs "#"    (rule 17)

	":"            shift, and enter state 49


State 49

	component -> "component" IDENT maybe__typeComparisons__ ":" . functionDefs "#"    (rule 17)

	IDENT          shift, and enter state 10
	"#"            reduce using rule 18

	functionDefs   goto state 81
	functionDef    goto state 82
	functionTypeDefgoto state 9

State 50

	typeComparison -> "<:" IDENT .                      (rule 29)
	typeComparison -> "<:" IDENT . "<~" IDENT           (rule 30)

	","            reduce using rule 29
	":"            reduce using rule 29
	"<~"           shift, and enter state 80


State 51

	typeClass -> "class" IDENT maybe__typeComparisons__ ":" . memberTypes "#"    (rule 20)

	IDENT          shift, and enter state 10
	"#"            reduce using rule 21

	memberTypes    goto state 78
	functionTypeDefgoto state 79

State 52

	typeComparisons -> typeComparison "," . typeComparisons    (rule 28)

	"<:"           shift, and enter state 47

	typeComparisonsgoto state 77
	typeComparison goto state 45

State 53

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)
	nonTupleTypeDef -> "@" typedef . "->" typedef       (rule 61)

	"->"           shift, and enter state 76


State 54

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)
	nonTupleTypeDef -> "{" typedef . "}"                (rule 63)

	"->"           shift, and enter state 58
	"}"            shift, and enter state 75


State 55

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)
	nonTupleTypeDef -> "[" typedef . "]"                (rule 62)

	"->"           shift, and enter state 58
	"]"            shift, and enter state 74


State 56

	nonTupleTypeDef -> "(" typedef . ")"                (rule 59)
	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)

	"->"           shift, and enter state 58
	")"            shift, and enter state 73


State 57

	tupleTypeDef -> nonTupleTypeDef "*" . tupleTypeDef    (rule 51)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 71
	tupleTypeDef   goto state 72
	nonTupleTypeDefgoto state 32

State 58

	nonTupleTypeDef -> typedef "->" . typedef           (rule 60)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 70
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 59

	functionDef -> functionTypeDef ";" IDENT functionParamDef . ":" body "#"    (rule 23)

	":"            shift, and enter state 69


State 60

	functionParamDef -> IDENT . functionParamDef        (rule 26)

	IDENT          shift, and enter state 60
	":"            reduce using rule 25

	functionParamDefgoto state 68

State 61

	moduleBody -> moduleItem moduleBody .               (rule 13)

	%eof           reduce using rule 13


State 62

	usings -> using ";" usings .                        (rule 5)

	IDENT          reduce using rule 5
	"class"        reduce using rule 5
	"component"    reduce using rule 5


State 63

	usingLabel -> "<" IDENT . ">"                       (rule 8)

	">"            shift, and enter state 67


State 64

	using -> "import" usingLabel "(" . identList ")"    (rule 7)

	IDENT          shift, and enter state 66

	identList      goto state 65

State 65

	using -> "import" usingLabel "(" identList . ")"    (rule 7)

	")"            shift, and enter state 106


State 66

	identList -> IDENT .                                (rule 10)
	identList -> IDENT . "," identList                  (rule 11)

	")"            reduce using rule 10
	","            shift, and enter state 105


State 67

	usingLabel -> "<" IDENT ">" .                       (rule 8)

	"("            reduce using rule 8
	";"            reduce using rule 8


State 68

	functionParamDef -> IDENT functionParamDef .        (rule 26)

	":"            reduce using rule 26


State 69

	functionDef -> functionTypeDef ";" IDENT functionParamDef ":" . body "#"    (rule 23)

	"if"           shift, and enter state 97
	"while"        shift, and enter state 98
	"repeat"       shift, and enter state 99
	"with"         shift, and enter state 100
	"switch"       shift, and enter state 101
	"for"          shift, and enter state 102
	IDENT          reduce using rule 110
	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 103
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43
	"return"       shift, and enter state 104

	body           goto state 89
	bodyBlock      goto state 90
	bodyLine       goto state 91
	assignment     goto state 92
	queue          goto state 93
	typedef        goto state 94
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32
	impureCall     goto state 95
	maybe__typedef__goto state 96

State 70

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)
	nonTupleTypeDef -> typedef "->" typedef .           (rule 60)

	IDENT          reduce using rule 60
	"->"           shift, and enter state 58
	")"            reduce using rule 60
	"]"            reduce using rule 60
	"}"            reduce using rule 60
	"*"            reduce using rule 60
	";"            reduce using rule 60
	"#"            reduce using rule 60


State 71

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)

	"->"           shift, and enter state 58


State 72

	typedef -> tupleTypeDef .                           (rule 49)
	tupleTypeDef -> nonTupleTypeDef "*" tupleTypeDef .    (rule 51)

	IDENT          reduce using rule 51
	"->"           reduce using rule 51
	")"            reduce using rule 51
	"]"            reduce using rule 51
	"}"            reduce using rule 51
	"*"            reduce using rule 51
	";"            reduce using rule 51
	"#"            reduce using rule 51


State 73

	nonTupleTypeDef -> "(" typedef ")" .                (rule 59)

	IDENT          reduce using rule 59
	"->"           reduce using rule 59
	")"            reduce using rule 59
	"]"            reduce using rule 59
	"}"            reduce using rule 59
	"*"            reduce using rule 59
	";"            reduce using rule 59
	"#"            reduce using rule 59


State 74

	nonTupleTypeDef -> "[" typedef "]" .                (rule 62)

	IDENT          reduce using rule 62
	"->"           reduce using rule 62
	")"            reduce using rule 62
	"]"            reduce using rule 62
	"}"            reduce using rule 62
	"*"            reduce using rule 62
	";"            reduce using rule 62
	"#"            reduce using rule 62


State 75

	nonTupleTypeDef -> "{" typedef "}" .                (rule 63)

	IDENT          reduce using rule 63
	"->"           reduce using rule 63
	")"            reduce using rule 63
	"]"            reduce using rule 63
	"}"            reduce using rule 63
	"*"            reduce using rule 63
	";"            reduce using rule 63
	"#"            reduce using rule 63


State 76

	nonTupleTypeDef -> typedef "->" . typedef           (rule 60)
	nonTupleTypeDef -> "@" typedef "->" . typedef       (rule 61)

	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 36
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43

	typedef        goto state 88
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32

State 77

	typeComparisons -> typeComparison "," typeComparisons .    (rule 28)

	":"            reduce using rule 28


State 78

	typeClass -> "class" IDENT maybe__typeComparisons__ ":" memberTypes . "#"    (rule 20)

	"#"            shift, and enter state 87


State 79

	memberTypes -> functionTypeDef . memberTypes        (rule 22)

	IDENT          shift, and enter state 10
	"#"            reduce using rule 21

	memberTypes    goto state 86
	functionTypeDefgoto state 79

State 80

	typeComparison -> "<:" IDENT "<~" . IDENT           (rule 30)

	IDENT          shift, and enter state 85


State 81

	component -> "component" IDENT maybe__typeComparisons__ ":" functionDefs . "#"    (rule 17)

	"#"            shift, and enter state 84


State 82

	functionDefs -> functionDef . functionDefs          (rule 19)

	IDENT          shift, and enter state 10
	"#"            reduce using rule 18

	functionDefs   goto state 83
	functionDef    goto state 82
	functionTypeDefgoto state 9

State 83

	functionDefs -> functionDef functionDefs .          (rule 19)

	"#"            reduce using rule 19


State 84

	component -> "component" IDENT maybe__typeComparisons__ ":" functionDefs "#" .    (rule 17)

	IDENT          reduce using rule 17
	"class"        reduce using rule 17
	"component"    reduce using rule 17
	%eof           reduce using rule 17


State 85

	typeComparison -> "<:" IDENT "<~" IDENT .           (rule 30)

	","            reduce using rule 30
	":"            reduce using rule 30


State 86

	memberTypes -> functionTypeDef memberTypes .        (rule 22)

	"#"            reduce using rule 22


State 87

	typeClass -> "class" IDENT maybe__typeComparisons__ ":" memberTypes "#" .    (rule 20)

	IDENT          reduce using rule 20
	"class"        reduce using rule 20
	"component"    reduce using rule 20
	%eof           reduce using rule 20


State 88

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)
	nonTupleTypeDef -> typedef "->" typedef .           (rule 60)
	nonTupleTypeDef -> "@" typedef "->" typedef .       (rule 61)

	IDENT          reduce using rule 61
	"->"           shift, and enter state 58
	")"            reduce using rule 61
	"]"            reduce using rule 61
	"}"            reduce using rule 61
	"*"            reduce using rule 61
	";"            reduce using rule 61
	"#"            reduce using rule 61


State 89

	functionDef -> functionTypeDef ";" IDENT functionParamDef ":" body . "#"    (rule 23)

	"#"            shift, and enter state 138


State 90

	body -> bodyBlock .                                 (rule 31)
	body -> bodyBlock . body                            (rule 32)

	"if"           shift, and enter state 97
	"else"         reduce using rule 31
	"while"        shift, and enter state 98
	"repeat"       shift, and enter state 99
	"with"         shift, and enter state 100
	"switch"       shift, and enter state 101
	"for"          shift, and enter state 102
	IDENT          reduce using rule 110
	"("            shift, and enter state 33
	"["            shift, and enter state 34
	"{"            shift, and enter state 35
	"@"            shift, and enter state 103
	"int"          shift, and enter state 37
	"bool"         shift, and enter state 38
	"real"         shift, and enter state 39
	"char"         shift, and enter state 40
	"string"       shift, and enter state 41
	"()"           shift, and enter state 42
	"Any"          shift, and enter state 43
	"#"            reduce using rule 31
	"return"       shift, and enter state 104

	body           goto state 137
	bodyBlock      goto state 90
	bodyLine       goto state 91
	assignment     goto state 92
	queue          goto state 93
	typedef        goto state 94
	tupleTypeDef   goto state 31
	nonTupleTypeDefgoto state 32
	impureCall     goto state 95
	maybe__typedef__goto state 96

State 91

	bodyBlock -> bodyLine . ";"                         (rule 33)

	";"            shift, and enter state 136


State 92

	bodyLine -> assignment .                            (rule 43)

	";"            reduce using rule 43


State 93

	bodyLine -> queue .                                 (rule 44)

	";"            reduce using rule 44


State 94

	nonTupleTypeDef -> typedef . "->" typedef           (rule 60)
	maybe__typedef__ -> typedef .                       (rule 111)

	IDENT          reduce using rule 111
	"->"           shift, and enter state 58


State 95

	bodyLine -> impureCall .                            (rule 45)

	";"            reduce using rule 45


State 96

	assignment -> maybe__typedef__ . IDENT "=" expr     (rule 47)
	queue -> maybe__typedef__ . IDENT "<-" expr         (rule 48)

	IDENT          shift, and enter state 135


State 97

	bodyBlock -> "if" . expr ":" body "else" ":" body "#"    (rule 34)
